--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
-Hello, World!
-hello world test
+<!doctype html>
+
+<html lang="it">
+<head>
+  <meta charset="utf-8">
+
+  <title>Less Homepage</title>
+  <meta name="description" content="Less GitHub Homepage">
+  <meta name="author" content="Less">
+
+  <link rel="stylesheet" href="public/css/main.css">
+
+</head>
+
+<body>
+    <h1>Hello world!</h1>
+    <button onclick="fooBar()">Hello</button>
+  <script src="js/scripts.js"></script>
+</body>
+</html>
