--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 <body>
     <h1>Hello world!</h1>
     <button onclick="fooBar()">Hello</button>
-  <script src="js/scripts.js"></script>
+  <script src="public/js/main.js"></script>
 </body>
 </html>
