--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 </head>
 
 <body>
-    <h1>Hello world!</h1>
-    <button onclick="fooBar()">Hello</button>
+    <img src="public/images/logo.jpeg">
   <script src="public/js/main.js"></script>
 </body>
 </html>
