--- a/index.html
+++ b/index.html
@@ -3,17 +3,27 @@
 <html lang="it">
 <head>
   <meta charset="utf-8">
-
   <title>Less Homepage</title>
   <meta name="description" content="Less GitHub Homepage">
   <meta name="author" content="Less">
-
   <link rel="stylesheet" href="public/css/main.css">
-
+  <script src="https://kit.fontawesome.com/fba089255e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <img src="public/images/logo.jpeg">
+    <header>
+        <div>L</div>
+        <p>Less</p>
+        <p>alessiocellucci.dev@gmail.com</p>
+        <a href="#githubpage">GitHub Page</a>
+    </header>
+    <h2>I miei progetti</h2>
+    <div>
+        <p>Project Name</p>
+        <p>Project Description</p>
+        <p>Linguaggi e librerie:</p>
+        <p>Project, Languages</p>
+    </div>
   <script src="public/js/main.js"></script>
 </body>
 </html>
