Aggiunto CSS di base

--- a/index.html
+++ b/index.html
@@ -12,17 +12,36 @@
 
 <body>
     <header>
-        <div>L</div>
-        <p>Less</p>
-        <p>alessiocellucci.dev@gmail.com</p>
-        <a href="#githubpage">GitHub Page</a>
+        <div id="logo">L</div>
+        <p id="logoName">Less</p>
+        <p><i class="fas fa-envelope"></i> alessiocellucci.dev@gmail.com</p>
+        <a href="#githubpage"><i class="fab fa-github"></i> less-hub</a>
+        <nav id="navigator">
+          <li><a href="index.html">Home</a></li>
+        </nav>
     </header>
-    <h2>I miei progetti</h2>
-    <div>
-        <p>Project Name</p>
-        <p>Project Description</p>
-        <p>Linguaggi e librerie:</p>
-        <p>Project, Languages</p>
+    <div id="mainPage">
+      <h2 id="mainTitle">I miei progetti</h2>
+      <div id="allProjectsContainer">
+        <div class="projectContainer">
+            <p>Project Name</p>
+            <p>Project Description</p>
+            <p>Linguaggi e librerie:</p>
+            <p>Project, Languages</p>
+        </div>
+        <div class="projectContainer">
+          <p>Project Name</p>
+          <p>Project Description</p>
+          <p>Linguaggi e librerie:</p>
+          <p>Project, Languages</p>
+        </div>
+        <div class="projectContainer">
+          <p>Project Name</p>
+          <p>Project Description</p>
+          <p>Linguaggi e librerie:</p>
+          <p>Project, Languages</p>
+        </div>
+      </div>
     </div>
   <script src="public/js/main.js"></script>
 </body>
