Aggiunto CSS per i progetti

--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
       <h2 id="mainTitle">I miei progetti</h2>
       <div id="allProjectsContainer">
         <div class="projectContainer">
-            <p>Project Name</p>
-            <p>Project Description</p>
-            <p>Linguaggi e librerie:</p>
-            <p>Project, Languages</p>
+            <p class="projectName">Project Name</p>
+            <p class="projectDescription hidden">Project Description</p>
+            <p class="projectTags hidden">Tags:</p>
+            <p class="projectLanguages hidden">Project, Languages</p>
         </div>
         <div class="projectContainer">
-          <p>Project Name</p>
-          <p>Project Description</p>
-          <p>Linguaggi e librerie:</p>
-          <p>Project, Languages</p>
+          <p class="projectName">Project Name</p>
+          <p class="projectDescription hidden">Project Description</p>
+          <p class="projectTags hidden">Tags:</p>
+          <p class="projectLanguages hidden">Project, Languages</p>
         </div>
         <div class="projectContainer">
-          <p>Project Name</p>
-          <p>Project Description</p>
-          <p>Linguaggi e librerie:</p>
-          <p>Project, Languages</p>
+          <p class="projectName">Project Name</p>
+          <p class="projectDescription hidden">Project Description</p>
+          <p class="projectTags hidden">Tags:</p>
+          <p class="projectLanguages hidden">Project, Languages</p>
         </div>
       </div>
     </div>
