--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
     <div id="mainPage">
       <h2 id="mainTitle">I miei progetti</h2>
       <div id="allProjectsContainer">
-        <div class="projectContainer">
+        <div class="projectContainer" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)">
             <p class="projectName">Project Name</p>
-            <p class="projectDescription hidden">Project Description</p>
-            <p class="projectTags hidden">Tags:</p>
-            <p class="projectLanguages hidden">Project, Languages</p>
+            <p class="projectDescription">Project Description</p>
+            <p class="projectTags">Tags:</p>
+            <p class="projectLanguages">Project, Languages</p>
         </div>
-        <div class="projectContainer">
-          <p class="projectName">Project Name</p>
-          <p class="projectDescription hidden">Project Description</p>
-          <p class="projectTags hidden">Tags:</p>
-          <p class="projectLanguages hidden">Project, Languages</p>
+        <div class="projectContainer" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)">
+            <p class="projectName">Project Name</p>
+            <p class="projectDescription">Project Description</p>
+            <p class="projectTags">Tags:</p>
+            <p class="projectLanguages">Project, Languages</p>
         </div>
-        <div class="projectContainer">
-          <p class="projectName">Project Name</p>
-          <p class="projectDescription hidden">Project Description</p>
-          <p class="projectTags hidden">Tags:</p>
-          <p class="projectLanguages hidden">Project, Languages</p>
+        <div class="projectContainer" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)">
+            <p class="projectName">Project Name</p>
+            <p class="projectDescription">Project Description</p>
+            <p class="projectTags">Tags:</p>
+            <p class="projectLanguages">Project, Languages</p>
         </div>
       </div>
     </div>
