Ottimizzazione modularità CSS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Less GitHub Homepage">
   <meta name="author" content="Less">
   <link rel="stylesheet" href="public/css/main.css">
+  <link rel="stylesheet" href="public/css/animations.css">
+  <link rel="stylesheet" href="public/css/header.css">
   <script src="https://kit.fontawesome.com/fba089255e.js" crossorigin="anonymous"></script>
 </head>
 
