Rinomina dei main CSS e JS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Less Homepage</title>
   <meta name="description" content="Less GitHub Homepage">
   <meta name="author" content="Less">
-  <link rel="stylesheet" href="public/css/main.css">
+  <link rel="stylesheet" href="public/css/index.css">
   <link rel="stylesheet" href="public/css/animations.css">
   <link rel="stylesheet" href="public/css/header.css">
   <script src="https://kit.fontawesome.com/fba089255e.js" crossorigin="anonymous"></script>
@@ -22,8 +22,8 @@
           <li><a href="index.html" class="active">Home</a></li>
         </nav>
     </header>
-    <div id="mainPage">
-      <h2 id="mainTitle">I miei progetti</h2>
+    <div class="mainPage">
+      <h2 class="mainTitle">I miei progetti</h2>
       <div id="allProjectsContainer">
         <div class="projectContainer" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)" onmousedown="toPage('cpp/main.html')">
             <p class="projectName">C++ Reference</p>
@@ -32,6 +32,6 @@
         </div>
       </div>
     </div>
-  <script src="public/js/main.js"></script>
+  <script src="public/js/index.js"></script>
 </body>
 </html>
