--- a/cpp/main.html
+++ b/cpp/main.html
@@ -6,7 +6,7 @@
   <title>Less Homepage</title>
   <meta name="description" content="Less GitHub Homepage">
   <meta name="author" content="Less">
-  <link rel="stylesheet" href="../public/css/main.css">
+  <link rel="stylesheet" href="../public/css/index.css">
   <link rel="stylesheet" href="../public/css/animations.css">
   <link rel="stylesheet" href="../public/css/header.css">
   <script src="https://kit.fontawesome.com/fba089255e.js" crossorigin="anonymous"></script>
@@ -24,8 +24,8 @@
             <li><a href="main.html" class="active">C++ Reference</a></li>
         </nav>
     </header>
-    <div id="mainPage">
-      <h2 id="mainTitle">C++ Reference</h2>
+    <div class="mainPage">
+      <h2 class="mainTitle">C++ Reference</h2>
       <div id="allProjectsContainer">
         <div class="projectContainer" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)" onmousedown="toPage('#part1')">
             <p class="projectName">Parte 1</p>
@@ -44,6 +44,6 @@
         </div>
       </div>
     </div>
-  <script src="../public/js/main.js"></script>
+  <script src="../public/js/index.js"></script>
 </body>
 </html>
