Miglioramento layout delle parti C++

--- a/cpp/main.html
+++ b/cpp/main.html
@@ -29,15 +29,135 @@
       <div class="allPartsContainer">
         <div class="partContainer" onmouseover="openContainer(this)" onmouseout="closeContainer(this)" onmousedown="toPage('#part1')">
             <p class="partName">Parte 1</p>
-            <p class="partDescription">Questa parte si basa sui fondamentali del C++: dai tipi di dati alle librerie standard</p>
+            <div class="partInfo">
+                <p class="partDescription">Questa parte si basa sui fondamentali del C++: dai tipi di dati alle librerie standard</p>
+                <ol class="partIndex">
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                </ol>
+            </div>
         </div>
         <div class="partContainer" onmouseover="openContainer(this)" onmouseout="closeContainer(this)" onmousedown="toPage('#part1')">
             <p class="partName">Parte 2</p>
-            <p class="partDescription">Questa parte si basa sui fondamentali del C++: dai tipi di dati alle librerie standard</p>
+            <div class="partInfo">
+                <p class="partDescription">Questa parte si basa sui fondamentali del C++: dai tipi di dati alle librerie standard</p>
+                <ol class="partIndex">
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                </ol>
+            </div>
         </div>
         <div class="partContainer" onmouseover="openContainer(this)" onmouseout="closeContainer(this)" onmousedown="toPage('#part1')">
             <p class="partName">Parte 3</p>
-            <p class="partDescription">Questa parte si basa sui fondamentali del C++: dai tipi di dati alle librerie standard</p>
+            <div class="partInfo">
+                <p class="partDescription">Questa parte si basa sui fondamentali del C++: dai tipi di dati alle librerie standard</p>
+                <ol class="partIndex">
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">Introduzione</a></li>
+                </ol>
+            </div>
         </div>
       </div>
     </div>
