Aggiunto FontAwesome locale

--- a/cpp/main.html
+++ b/cpp/main.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../public/css/header.css">
   <link rel="stylesheet" href="../public/css/cppmain.css">
   <link rel="stylesheet" href="../public/css/animations.css">
-  <script src="https://kit.fontawesome.com/fba089255e.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../public/css/css/all.css">
 </head>
 
 <body>
