--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="public/css/index.css">
   <link rel="stylesheet" href="public/css/animations.css">
   <link rel="stylesheet" href="public/css/header.css">
-  <script src="https://kit.fontawesome.com/fba089255e.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="public/css/css/all.css">
 </head>
 
 <body>
