Ora il logo e clickabile e porta alla homepage

--- a/cpp/main.html
+++ b/cpp/main.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div id="logo">L</div>
+        <div id="logo" onmousedown="toPage('../index.html')">L</div>
         <p id="logoName">Less</p>
         <p><i class="fas fa-envelope"></i> alessiocellucci.dev@gmail.com</p>
         <a href="#githubpage"><i class="fab fa-github"></i> less-hub</a>
