--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <link rel="stylesheet" href="public/css/animations.css">
   <link rel="stylesheet" href="public/css/header.css">
   <link rel="stylesheet" href="public/css/css/all.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <div id="logo">L</div>
+        <div id="logo" onmousedown="toPage('index.html')">L</div>
         <p id="logoName">Less</p>
         <p><i class="fas fa-envelope"></i> alessiocellucci.dev@gmail.com</p>
         <a href="#githubpage"><i class="fab fa-github"></i> less-hub</a>
