--- a/cpp/main.html
+++ b/cpp/main.html
@@ -10,14 +10,15 @@
   <link rel="stylesheet" href="../public/css/cppmain.css">
   <link rel="stylesheet" href="../public/css/animations.css">
   <link rel="stylesheet" href="../public/css/css/all.css">
+  <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <div id="logo" onmousedown="toPage('../index.html')">L</div>
         <p id="logoName">Less</p>
-        <p><i class="fas fa-envelope"></i> alessiocellucci.dev@gmail.com</p>
-        <a href="#githubpage"><i class="fab fa-github"></i> less-hub</a>
+        <p><i class="fas fa-envelope" style="margin-right: .4rem;"></i>alessiocellucci.dev@gmail.com</p>
+        <a href="#githubpage"><i class="fab fa-github" style="margin-right: .4rem;"></i>less-hub</a>
         <nav id="navigator">
             <li><a href="../index.html">Home</a></li>
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
