Aggiunto scheletro HTML C++ parte 1

--- a/cpp/main.html
+++ b/cpp/main.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Less Homepage</title>
-  <meta name="description" content="Less GitHub Homepage">
+  <meta name="description" content="Less C++ reference">
   <meta name="author" content="Less">
   <link rel="stylesheet" href="../public/css/header.css">
   <link rel="stylesheet" href="../public/css/cppmain.css">
@@ -33,8 +33,8 @@
             <div class="partInfo">
                 <p class="partDescription">Questa parte si basa sui fondamentali del C++: dai tipi di dati alle librerie standard</p>
                 <ol class="partIndex">
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="parts/1.html#intro">Introduzione</a></li>
+                    <li><a href="parts/1.html#lorem">Introduzione</a></li>
                     <li><a href="#intro">Introduzione</a></li>
                     <li><a href="#intro">Introduzione</a></li>
                     <li><a href="#intro">Introduzione</a></li>
