--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Less Homepage</title>
-  <meta name="description" content="Less GitHub Homepage">
+  <meta name="description" content="Less Homepage">
   <meta name="author" content="Less">
   <link rel="stylesheet" href="public/css/index.css">
   <link rel="stylesheet" href="public/css/animations.css">
