Aggiunto scheletro CSS parti C++

--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -7,15 +7,15 @@
   <meta name="description" content="Less C++ part 1">
   <meta name="author" content="Less">
   <link rel="stylesheet" href="../../public/css/header.css">
-  <link rel="stylesheet" href="../../public/css/cppmain.css">
   <link rel="stylesheet" href="../../public/css/animations.css">
   <link rel="stylesheet" href="../../public/css/css/all.css">
+  <link rel="stylesheet" href="../../public/css/cparts.css">
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <div id="logo" onmousedown="toPage('../index.html')">L</div>
+        <div id="logo" onmousedown="toPage('../../index.html')">L</div>
         <p id="logoName">Less</p>
         <p><i class="fas fa-envelope" style="margin-right: .4rem;"></i>alessiocellucci.dev@gmail.com</p>
         <a href="#githubpage"><i class="fab fa-github" style="margin-right: .4rem;"></i>less-hub</a>
@@ -25,6 +25,51 @@
             <li><a href="../main.html">C++ Reference</a></li>
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
             <li><a href="1.html" class="active">Parte 1</a></li>
+            <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
+            <li class="navigatorIndexContainer">
+              <ul class="navigatorIndex">
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#intro">Introduzione</a></li>
+              </ul>
+            </li>
         </nav>
     </header>
     <div class="mainPage">
@@ -35,15 +80,46 @@
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
         sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
-      <h3 id="lorem">lorem ipsum sit amet</h3>
-      <p>
-        Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-        sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      
+
+      <div id="lorem" class="chapter">
+        <h3>lorem ipsum sit amet</h3>
+        <p>
+          Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+          sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <pre>
+            int x = 2;</pre>
+      </div>
+
+      <div id="ipsum" class="chapter">
+        <h3>lorem ipsum sit amet</h3>
+        <p>
+          Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+          sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <div class="codeContainer">
+          <pre>
+              int x = 2;
+              x * x = 7;
+              x = func(2, "sksk");
+
+              <strong style="color: #9bc1bc;">if(x == 7)</strong>
+                return true;</pre>
+          <div class="codeCommentsContainer">
+            <p class="codeCommentHead">Commenti:</p>
+            <p class="codeComment">
+              Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Ut enim ad minim veniam,
+            </p>
+          </div>
+        </div>
+      </div>
+
     </div>
-  <script src="../public/js/index.js"></script>
+  <script src="../../public/js/index.js"></script>
 </body>
 </html>
