Miglioramento scrittura codici nelle parti C++

--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -89,8 +89,9 @@
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
           sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <pre>
-            int x = 2;</pre>
+        <pre><code>
+            int x = 2;
+        </code></pre>
       </div>
 
       <div id="ipsum" class="chapter">
@@ -102,13 +103,15 @@
           sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <div class="codeContainer">
-          <pre>
-              int x = 2;
-              x * x = 7;
-              x = func(2, "sksk");
 
-              <strong style="color: #9bc1bc;">if(x == 7)</strong>
-                return true;</pre>
+          <pre><code>
+            int x = 2;
+            x * x = 7;
+            x = func(2, "sksk");
+
+            <strong>if(x == 7)</strong>
+              return true;
+          </code></pre>
           <div class="codeCommentsContainer">
             <p class="codeCommentHead">Commenti:</p>
             <p class="codeComment">
@@ -120,6 +123,7 @@
       </div>
 
     </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="../../public/js/index.js"></script>
 </body>
 </html>
