Miglioramento codice CSS delle parti C++

--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../public/css/css/all.css">
   <link rel="stylesheet" href="../../public/css/cparts.css">
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -81,19 +82,7 @@
         sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
 
-      <div id="lorem" class="chapter">
-        <h3>lorem ipsum sit amet</h3>
-        <p>
-          Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-          sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <pre><code>
-            int x = 2;
-        </code></pre>
-      </div>
-
+      <!-- Chapter -->
       <div id="ipsum" class="chapter">
         <h3>lorem ipsum sit amet</h3>
         <p>
@@ -103,24 +92,29 @@
           sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <div class="codeContainer">
+          <div class="codeAndLabel">
+            <p class="codeLabel">Listato 1.0</p>
+            <pre><code>
+              int x = 2;
+              x * x = 7;
+              x = func(2, "sksk");
 
-          <pre><code>
-            int x = 2;
-            x * x = 7;
-            x = func(2, "sksk");
-
-            <strong>if(x == 7)</strong>
-              return true;
-          </code></pre>
+              <strong>if(x == 7)</strong>
+                return true;
+            </code></pre>
+          </div>
           <div class="codeCommentsContainer">
             <p class="codeCommentHead">Commenti:</p>
-            <p class="codeComment">
-              Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua. Ut enim ad minim veniam,
-            </p>
+            <ul class="codeComment">
+              <li>
+                Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Ut enim ad minim veniam,
+              </li>
+            </ul>
           </div>
         </div>
       </div>
+      <!-- End of chapter -->
 
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
