Risoluzione nomi e aggiunto scheletro HTML exercism

--- a/cpp/cpp.html
+++ b/cpp/cpp.html
@@ -22,7 +22,7 @@
         <nav id="navigator">
             <li><a href="../index.html">Home</a></li>
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
-            <li><a href="main.html" class="active">C++ Reference</a></li>
+            <li><a href="cpp.html" class="active">C++ Reference</a></li>
         </nav>
     </header>
     <div class="mainPage">
