--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -23,7 +23,7 @@
         <nav id="navigator">
             <li><a href="../../index.html">Home</a></li>
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
-            <li><a href="../main.html">C++ Reference</a></li>
+            <li><a href="../cpp.html">C++ Reference</a></li>
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
             <li><a href="1.html" class="active">Parte 1</a></li>
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
