--- a/index.html
+++ b/index.html
@@ -26,10 +26,15 @@
     <div class="mainPage">
       <h2 class="mainTitle">I miei progetti</h2>
       <div id="allProjectsContainer">
-        <div class="projectContainer" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)" onmousedown="toPage('cpp/main.html')">
+        <div class="projectContainer" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)" onmousedown="toPage('cpp/cpp.html')">
             <p class="projectName">C++ Reference</p>
             <p class="projectDescription">Un riassiunto dei costrutti principali del C++, scendendo mano a mano nel dettaglio cosi da avere una visione generale del linguaggio.</p>
             <p class="projectLanguages">C++</p>
+        </div>
+        <div class="projectContainer" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)" onmousedown="toPage('exercism/exercism.html')">
+            <p class="projectName">Exercism</p>
+            <p class="projectDescription">Una collezione degli esercizi che ho svolto sulla piattaforma exercism.io</p>
+            <p class="projectLanguages">C++, C#, JavaScript</p>
         </div>
       </div>
     </div>
