Aggiunto scheletro CSS sezione exercism e link

--- a/exercism/exercism.html
+++ b/exercism/exercism.html
@@ -7,9 +7,9 @@
   <meta name="description" content="Less C++ reference">
   <meta name="author" content="Less">
   <link rel="stylesheet" href="../public/css/header.css">
-  <link rel="stylesheet" href="../public/css/cppmain.css">
   <link rel="stylesheet" href="../public/css/animations.css">
   <link rel="stylesheet" href="../public/css/css/all.css">
+  <link rel="stylesheet" href="../public/css/exercismmain.css">
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 </head>
 
@@ -26,8 +26,28 @@
         </nav>
     </header>
     <div class="mainPage">
-      <h2 class="mainTitle">Esercizi <a href="#exercism">exercism.io</a></h2>
-
+      <h2 class="mainTitle">Esercizi <a href="https://exercism.io/" target="_blank">exercism.io</a></h2>
+      <div class="allExercisesContainer">
+        <div class="exerciseLanguageContainer" onmouseover="openContainerHeight(this)" onmouseout="closeContainerHeight(this)" onmousedown="#exercise">
+            <p class="languageName">C++</p>
+            <ul class="exerciseIndex">
+              <li><a href="#exercise">Hello World lorem ipsum dolor sit amet</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+            </ul>
+        </div>
+      </div>
     </div>
   <script src="../public/js/index.js"></script>
 </body>
